apps/my-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  selector:
    app: my-app  # Выбирает и v1, и v2
  ports:
  - port: 80
    targetPort: 80
