apps/my-app/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-app
spec:
  hosts:
  - "*"
  gateways:
  - my-app-gateway
  http:
  - route:
    - destination:
        host: my-app
        subset: v1
      weight: 100  # Первоначально весь трафик на v1
    - destination:
        host: my-app
        subset: v2
      weight: 0    # Пока 0% на v2
